# clean-kit

./: .gitignore  Cargo.toml  LICENSE  README.md  after.bat  before.bat  cleankit.toml  diff.bat  release.bat  release.sh
.github/workflows/: release.yml
src/: config.rs  diff.rs  main.rs  menu.rs  output.rs  snapshot.rs
src/collectors/: files.rs  firewall.rs  mod.rs  network.rs  processes.rs  registry.rs  services.rs  startup.rs  tasks.rs  wmi.rs
src/netwatch/: mod.rs  poll.rs  submenu.rs  view.rs
