[package]
name = "clean-kit"
version = "0.1.0"
edition = "2021"
description = "Windows system state snapshot and diff tool for malware analysis"
license = "MIT"

[[bin]]
name = "ck"
path = "src/main.rs"

[dependencies]
inquire    = "0.7"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
walkdir    = "2"
chrono     = { version = "0.4", features = ["serde"] }
colored    = "2"
anyhow     = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
